--- a/static/manifest.json
+++ b/static/manifest.json
@@ -9,14 +9,12 @@
 		{
 			"src": "logo-192.png",
 			"sizes": "192x192",
-			"type": "image/png",
-			"purpose": "any maskable"
+			"type": "image/png"
 		},
 		{
 			"src": "logo-512.png",
 			"sizes": "512x512",
-			"type": "image/png",
-			"purpose": "any maskable"
+			"type": "image/png"
 		}
 	]
 }
